--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Site</title>
+  <title>Azure Blossom Resort</title>
  </head>
 <body>
   <button class="sticky-button"><a href="Video.mp4">Open Video</a></button>
